Fixed text alignment for jumbotron and centered it in CSS under class.

--- a/style.css
+++ b/style.css
@@ -29,17 +29,24 @@ h1 {
     background-color: turquoise;
     opacity: 75%;
     background-size: cover;
+    text-align:center;
   }
 .restaurant-container-md{
-    width: 320px;
-    padding: 10px;
+    width: 500px;
+    height: 500px;
+    padding: 40px;
     border: 5px solid gray;
-    margin: 0;
+    margin: 20px;
+
 }
 .attract-container-md{
-    width: 320px;
-    padding: 10px;
+    width: 500px;
+    height: 500px;
+    padding: 40px;
     border: 5px solid gray;
-    margin: 0;
+    margin: 20px;
 }
 
+.map-container-md{
+    float: right;
+}
